# icd

./: .gitignore  .toolchainfile.cmake  CMakeCache.txt  CMakeLists.txt  Makefile  README  aggregate.sql  cmake_install.cmake  config.h.in  create_config.sql  create_events.sql  create_flow.sql  daemonizer.cc  db-config.cc  db-config.h  icd-aggr-data.cc  icd-bashrc.txt  icd-config.cc  icd-fc-daemon.cc  icd-itd-daemon.cc  icd-scripts.txt  icd-spec.txt  icd-sql.cc  icd-transfer-data.cc  icdtcp3-aggr-data.cc  icdtcp3-config.cc  icdtcp3-itd-daemon.cc  icdtcp3-spec.txt  icdtcp3-sql.cc  icdtcp3-transfer-data.cc  insert_into_flow.sql  install.sh  itd-daemon.cc  make-export.sh  make-package.sh  make-srcpkg.sh  make-target.sh  make-version.sh  sqlite3cc.h  syslogstream.h  (+3 more)
_arm/: CMakeCache.txt  Makefile  cmake_install.cmake
_arm/src/: Makefile  cmake_install.cmake  version.cc
_local/: CMakeCache.txt  Makefile  cmake_install.cmake  lazy  lazy_read.c  lazy_read.sh
_local/src/: Makefile  cmake_install.cmake  icd-config  icd-fc-daemon  icd-itd-daemon  icd-sql  icd-test  icd-transfer-data  version.cc
etc/: lighttpd.conf
etc/init.d/: S70icd  S80lighttpd
icdtcp3-itd-daemon/: Makefile
icdtcp3-itd-kmod/: Makefile
icdtcp3-transfer-data/: Makefile  icdtcp3-transfer-data  icdtcp3-transfer-data.cc  sqlite3cc.h  transfer-agent.cc
itd-kmod/: Makefile
scripts/: create-config-db  icd-check-internet  icd-counters-daemon-restart  icd-create-config-db  icd-create-data  icd-create-flow-db  icd-create-live-db  icd-current  icd-dnsmasq  icd-get-current-dtm  icd-gsm-daemon  icd-init-last-aggr-time  icd-net  icd-net-route-resolv  icd-network  icd-run-daemon  icd-run-www-transfer  icd-shutdown  icd-sync-config  icd-sync-db  icd-sync-flow  icd-wifi-cfg  icd-wifi-cfg-from  icd-wifi-daemon  icd-wifi-manager  icdtcp3-update-sw  icdtcp3-version
share/: aggregate.sql  clean-events.sql  clean-flow.sql  clean-tests.sql  clear-old-current.sql  create-schema-counters.sql  create-schema-data-db.sql  create-schema-flow.sql  create-schema-tests.sql  create-schema-tmp-db.sql  error.script  init-default-config.sql  init-last-aggr-time.sql  list-flow.sql  list-tests.sql  network.script  populate-data-db.sql  remove-old-events-force.sql  remove-old-events.sql  remove-old-flow-force.sql  remove-old-flow.sql  remove-old-tests.sql  show_configdb_init_values.sh  sync-config.sql  sync-flow.sql  udhcpc.script
share/gsm/: common_wvdial.conf
share/gsm/iplus/huawei-e1750/: chk-pppd-call  chk-pppd-cfg  chk-usb_modeswitch
share/gsm/orange+huawei-e1750/: modeswitch.conf
share/gsm/orange+huawei-e1752/: wvdial.conf
share/gsm/orange+huawei-e367/: info  modeswitch.conf
share/gsm/test_prov_2/: test_modem222
share/gsm/test_provider/test_modem/: run-dns  run-pppd-call  run-pppd-cfg  run-usb_modeswitch
share/gsm/test_provider/test_modem222/: chk-dns
sql/: attach-config-db.sql  attach-flow-db.sql  attach-live-db.sql  begin-transaction.sql  commit-transaction.sql  create-schema-config.sql  create-schema-events.sql  detach-db.sql  error.script  get-current-dtm.sql  init-default-config.sql  init-last-aggr-time.sql  list-events.sql  network.script  sync-config.sql
src/: CMakeLists.txt  cmake_install.cmake  counters-counters.cpp  counters-counters.hpp  counters-daemon.cpp  counters-farm.cpp  counters-farm.hpp  counters-utils.cpp  counters-utils.hpp  counters.hpp  curlcc.h  daemonizer.cc  daemonizer.h  db-config.cc  db-config.h  icd-config.cc  icd-counters.cpp  icd-cron.cpp  icd-fc-daemon.cc  icd-flush-db.cpp  icd-itd-daemon.cc  icd-logrotate.cpp  icd-sql.cc  icd-test.cc  icd-transfer-data.cc  icd-wifi-cfg-to.cpp  itd-device.cc  itd-device.h  itd-test.cc  itd-vds.cc  itd-vds.h  lcd-driver.cpp  lcd-driver.hpp  lcd-fc-daemon.cpp  lcd-menu-front-item.cpp  lcd-menu-front-item.hpp  lcd-menu.cpp  lcd-menu.hpp  logger.cpp  logger.hpp  (+14 more)
src/gsoap/: C.cpp  H.h  Makefile  Service1Soap12.nsmap  Service1Soap12Proxy.cpp  Service1Soap12Proxy.h  Service1SoapProxy.cpp  Service1SoapProxy.h  Stub.h  _Service1SoapProxy.h  _Stub.h  _icdtcp3SoapProxy.h  icdtcp3Soap12.nsmap  icdtcp3Soap12Proxy.cpp  icdtcp3Soap12Proxy.h  icdtcp3SoapProxy.cpp  icdtcp3SoapProxy.h  kom.h  schem.h  schem.wsdl
src/transfer-gsoap/: C.cpp  H.h  Stub.h  _Stub.h  icdtcp3Soap12Proxy.cpp  icdtcp3Soap12Proxy.h  icdtcp3SoapProxy.h  schem.wsdl  stdsoap2.h
www/: index.php  live.db  popup.php  test.php
www/_tosty/: index.html  test.php
www/css/: icdtcp.css
www/inc/: administracja.php  c_gsm.php  c_icdtcp.php  c_logi.php  c_wifi.php  c_wpa.php  gsm.php  info.php  licznik.php  log.php  logowanie.php  plik_konf.php  tcpip.php  test_wysylania.php  wifi.php  wpa.php  wyniki.php  wyniki_dobowy.php  wyniki_instalacyjny.php  wyniki_miesieczny.php  wysylanie.php  wzor.php
